# SkoodaOS

./: .gitignore  Cargo.toml  README.md  justfile
scripts/: build_rootfs.sh  make_iso.sh
skooda-init/: Cargo.toml
skooda-init/src/: main.rs
skooda-install/: Cargo.toml
skooda-install/src/: main.rs
skooda-net/: Cargo.toml
skooda-net/src/: config.rs  dhcp.rs  dns.rs  http.rs  interface.rs  ipc.rs  main.rs  monitor.rs  route.rs  wifi.rs
skooda-sh/: Cargo.toml
skooda-sh/src/: main.rs
skooda-update/: Cargo.toml
skooda-update/src/: main.rs
skooda-utils/: Cargo.toml
skooda-utils/src/: dmesg.rs  error.rs  fs.rs  insmod.rs  keymap.rs  lib.rs  logging.rs  lspci.rs  main.rs  mount.rs
