[workspace]
members = [
    "skooda-init", "skooda-install",
    "skooda-sh", "skooda-update",
    "skooda-utils", "skooda-net",
]
resolver = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Better optimization
panic = "abort"     # No unwinding (smaller binary)
strip = true        # Strip symbols

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["fs", "process", "mount", "term", "signal", "net", "ioctl"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"
ureq = { version = "2.9", features = ["json"] }
tar = "0.4"
zstd = "0.13"
skooda-utils = { path = "skooda-utils" }
walkdir = "2.5"
shlex = "1.3"
os_pipe = "1.1"
rustyline = "14"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures-util = "0.3"
dialoguer = "0.11"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = "2.1"
