[package]
name = "skooda-init"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { workspace = true }
libc = { workspace = true }
skooda-utils = { path = "../skooda-utils" }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"
futures-util = "0.3"
