[package]
name = "skooda-net"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { workspace = true }
libc = { workspace = true }
skooda-utils = { path = "../skooda-utils" }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
