[package]
name = "skooda-update"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
skooda-utils = { path = "../skooda-utils" }
tracing = { workspace = true }
anyhow = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
nix = { workspace = true }
ed25519-dalek = "2.1"
base64 = "0.22"
